<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--头部标题栏-->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="10"
        android:background="#DCDCDC">

        <ImageView
            android:id="@+id/back_imgView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="7dp"
            android:src="@mipmap/back"
            android:contentDescription="@string/description" />

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:src="@drawable/userlogo"
            android:contentDescription="@string/description" />

        <TextView
            android:id="@+id/food_detail_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/user_name"
            android:textColor="#000000"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/follow_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:padding="7dp"
            android:contentDescription="@string/description" />

        <ImageView
            android:id="@+id/more_menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:padding="5dp"
            android:src="@drawable/more"
            android:contentDescription="@string/description" />
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:descendantFocusability="blocksDescendants"
        android:id="@+id/video_and_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--视频播放及文字介绍区-->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
                    android:id="@+id/media_video"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"/>
                <com.youth.banner.Banner
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:id="@+id/img_banner"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/food_detail_title"
                        android:layout_width="0dp"
                        android:layout_weight="8"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/food_detail_title"
                        android:textColor="#2c2c2c"
                        android:textSize="25sp" />
                    <ImageView
                        android:id="@+id/like_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginEnd="25dp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="10dp"
                        android:text="10K"
                        android:id="@+id/like_num"
                        android:gravity="center|start"/>
                </LinearLayout>


                <TextView
                    android:id="@+id/food_detail_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/food_detail_text"
                    android:textColor="#515151"
                    android:textSize="20sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:showDividers="end"
                android:divider="@drawable/line_bottom">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/line_bottom"/>
                <TextView
                    android:gravity="center|start"
                    android:paddingStart="30dp"
                    android:background="#DCDCDC"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="评论区"/>
            </LinearLayout>
            <!--评论区设置是否可见-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <!-- 评论区-->
                <com.example.user.jiancan.home.activityAndFragment.CommentExpandableListView
                    android:id="@+id/detail_page_lv_comment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="64dp"
                    android:divider="@null"
                    android:listSelector="@android:color/transparent"
                    android:scrollbars="none" />
                <LinearLayout
                    android:id="@+id/detail_page_comment_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">



                </LinearLayout>
                <!--无评论时的展示-->
                <RelativeLayout
                    android:id="@+id/no_comment_hint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="暂时没有评论\n快来发表评论吧～"
                        android:textColor="#778899" />
                </RelativeLayout>
            </FrameLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


    <!--底部输入框-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_page_do_comment"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="22dp"
            android:layout_weight="1"
            android:background="@drawable/comment_bt_selector"
            android:gravity="center_vertical"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:text="@string/comment_text_hint"
            android:textColor="#B6B6B6"
            android:textSize="12sp" />


    </LinearLayout>


</RelativeLayout>
